[package]
name = "jar_conflict_detecter"
version = "0.1.0"
edition = "2021"
authors = ["aitozi <gjying1314@gmail.com>"]
description = "A simple command line tool to detector the potential conflicted classes in jars"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
zip = "0.6.5"

[[bin]]
name = "jcd" # short for jar_conflict_detector



