[package]
name = "jar_conflict_detecter"
version = "0.0.1"
edition = "2021"
authors = ["aitozi <gjying1314@gmail.com>"]
description = "A simple command line tool to detector the potential conflicted classes in jars"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Aitozi/jar_conflict_detector"
repository = "https://github.com/Aitozi/jar_conflict_detector"
keywords = ["java", "class"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
zip = "0.6.5"

[[bin]]
name = "jcd" # short for jar_conflict_detector



